tests/ui/g-route-controller-mismatch.stderr
error[E0080]: evaluation panicked: route arms use different controller self-sends
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project_role::<0, hibana::g::Route<hibana::g::Send<2, 2, hibana::g::Msg<5, ()>>, hibana::g::Send<0, 0, hibana::g::Msg<6, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_program_projection::<Route<hibana::g::Send<2, 2, Msg<5, ()>>, hibana::g::Send<0, 0, Msg<6, ()>>>>`
 --> src/g.rs
  |
  |         panic_program_source_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_program_source_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |         2 => panic!("route arms use different controller self-sends"),
  |              -------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project_role::<0, Route<hibana::g::Send<2, 2, Msg<5, ()>>, hibana::g::Send<0, 0, Msg<6, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
